--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,15 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
-    "@mui/x-date-pickers": "^6.11.0",
+    "@mui/x-date-pickers": "^6.20.2",
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "recharts": "^2.6.2"
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.6.2",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
