ready version for review 2

--- a/.env
+++ b/.env
@@ -12,4 +12,10 @@ IPINFO_TOKEN=dc848952e720d4
 
 # React App Environment Variables
 REACT_APP_IPINFO_TOKEN=dc848952e720d4
-REACT_APP_API_URL=http://localhost:5000 
+REACT_APP_API_URL=http://localhost:5000
+
+# Database Configuration
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=messi@30ABC
+DB_NAME=geomed 
