--- a/frontend/.env
+++ b/frontend/.env
@@ -2,4 +2,7 @@
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyBEH6r9XqCM0yaYeUINeF2dc_rawjPVhNA
 
 # API URL
-REACT_APP_API_URL=http://localhost:5000 
+REACT_APP_API_URL=http://localhost:5000
+
+# IPInfo token
+REACT_APP_IPINFO_TOKEN=YOUR_IPINFO_TOKEN 
